--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
                     <div>
                         <img src="assets/checkbox.png" alt="check" />
                     </div>
-                    <h1 id="total-counter" class="text-2xl font-bold">23</h1>
+                    <h1 id="total-counter" class="text-xl font-bold">23</h1>
                 </div>
-                <div id="bg-random-color" class="flex-none bg-primary p-1 rounded-2xl cursor-pointer">
+                <div id="bg-random-color" class="flex-none bg-primary p-1 rounded-xl cursor-pointer">
                     <a>
                         <img src="assets/theme-btn.png" alt="" srcset="" />
                     </a>
