--- a/index.html
+++ b/index.html
@@ -104,14 +104,14 @@
             <section class="mt-5">
                 <div class="grid grid-cols-3 gap-4">
                     <!-- card-1 -->
-                    <div class="card bg-primary p-3 space-y-5 rounded-md inline-block">
-                        <p class="text-light-color bg-white p-3 inline-block rounded-md">
+                    <div class="card bg-primary p-3 space-y-5 rounded-md">
+                        <p class="text-light-color bg-white p-3  rounded-md">
                             ShopEase
                         </p>
 
                         <h3 class="text-xl font-semibold">Fix Mobile Button Issue</h3>
                         <div>
-                            <p class="text-light-color bg-white p-3 inline-block rounded-md">
+                            <p class="text-light-color bg-white p-3 rounded-md">
                                 Debug using Chrome DevTools, check for overlapping elements,
                                 and ensure onClick works properly
                             </p>
@@ -131,14 +131,14 @@
                         </div>
                     </div>
                     <!-- card 2 -->
-                    <div class="card bg-primary p-3 space-y-5 rounded-md inline-block">
-                        <p class="text-light-color bg-white p-3 inline-block rounded-md">
+                    <div class="card bg-primary p-3 space-y-5 rounded-md ">
+                        <p class="text-light-color bg-white p-3  rounded-md">
                             CloudSync
                         </p>
 
                         <h3 class="text-xl font-semibold">Add Dark Mode</h3>
                         <div>
-                            <p class="text-light-color bg-white p-3 inline-block rounded-md">
+                            <p class="text-light-color bg-white p-3  rounded-md">
                                 Store the user's preference in localStorage, update CSS
                                 variables dynamically, and apply a smooth transition effect.
                             </p>
@@ -157,14 +157,14 @@
                         </div>
                     </div>
                     <!-- card 3 -->
-                    <div class="card bg-primary p-3 space-y-5 rounded-md inline-block">
-                        <p class="text-light-color bg-white p-3 inline-block rounded-md truncate">
+                    <div class="card bg-primary p-3 space-y-5 rounded-md ">
+                        <p class="text-light-color bg-white p-3  rounded-md truncate">
                             SwiftPay
                         </p>
 
                         <h3 class="text-xl font-semibold">Optimize Home page </h3>
                         <div>
-                            <p class="text-light-color bg-white p-3 inline-block rounded-md text-ellipsis">
+                            <p class="text-light-color bg-white p-3 rounded-md text-ellipsis">
                                 Debug using Chrome DevTools, check for overlapping elements,
                                 and ensure onClick works properly and ensure onClick works
                                 properly
@@ -184,14 +184,14 @@
                         </div>
                     </div>
                     <!-- card 4 -->
-                    <div class="card bg-primary p-3 space-y-5 rounded-md inline-block">
-                        <p class="text-light-color bg-white p-3 inline-block rounded-md">
+                    <div class="card bg-primary p-3 space-y-5 rounded-md">
+                        <p class="text-light-color bg-white p-3 rounded-md">
                             Meta
                         </p>
 
                         <h3 class="text-xl font-semibold">Add new emoji 🤲</h3>
                         <div>
-                            <p class="text-light-color bg-white p-3 inline-block rounded-md">
+                            <p class="text-light-color bg-white p-3 rounded-md">
                                 Debug using Chrome DevTools, check for overlapping elements,
                                 and ensure onClick works properly and ensure onClick works
                                 properly
@@ -211,14 +211,14 @@
                         </div>
                     </div>
                     <!-- card 5 -->
-                    <div class="card bg-primary p-3 space-y-5 rounded-md inline-block">
-                        <p class="text-light-color bg-white p-3 inline-block rounded-md">
+                    <div class="card bg-primary p-3 space-y-5 rounded-md ">
+                        <p class="text-light-color bg-white p-3  rounded-md">
                             Google LLC
                         </p>
 
                         <h3 class="text-xl font-semibold">Integrate OpenAI API</h3>
                         <div>
-                            <p class="text-light-color bg-white p-3 inline-block rounded-md">
+                            <p class="text-light-color bg-white p-3 rounded-md">
                                 Debug using Chrome DevTools, check for overlapping elements,
                                 and ensure onClick works properly
                             </p>
@@ -238,14 +238,14 @@
                         </div>
                     </div>
                     <!-- card 6 -->
-                    <div class="card bg-primary p-3 space-y-5 rounded-md inline-block">
-                        <p class="text-light-color bg-white p-3 inline-block rounded-md">
+                    <div class="card bg-primary p-3 space-y-5 rounded-md ">
+                        <p class="text-light-color bg-white p-3  rounded-md">
                             Glassdoar
                         </p>
 
                         <h3 class="text-xl font-semibold">Improve Job searching</h3>
                         <div>
-                            <p class="text-light-color bg-white p-3 inline-block rounded-lg">
+                            <p class="text-light-color bg-white p-3  rounded-lg">
                                 Debug using Chrome DevTools, check for overlapping elements,
                                 and ensure onClick works properly
                             </p>
