removing some style

--- a/blog.html
+++ b/blog.html
@@ -64,7 +64,7 @@
             DOM?
           </h1>
           <hr>
-          <p class="mt-4 text-gray-500 text-xl">
+          <p class=" text-gray-500 text-xl">
             The ways to select the DOM:
             <ul class="p-5  text-gray-500 text-xl">
               <li>getElementById</li>
@@ -83,7 +83,7 @@
           </h1>
           <hr>
           <p>
-            <ul class="ml-4  text-gray-500 text-xl">
+            <ul class="p-5  text-gray-500 text-xl">
               <li>innerHTML used for to get the text with HTML tag</li>
               <li>innerText used for to get only the text content with styles</li>
               <li>textContent used for to get only the text content without styles</li>
@@ -96,7 +96,7 @@
             Question-3: What is event delegation in the DOM?
           </h1>
           <hr>
-          <p class="mt-4 text-gray-500 text-xl">
+          <p class=" text-gray-500 text-xl">
             Controlling the DOM element from it's parent.
           </p>
         </div>
@@ -105,9 +105,8 @@
           <h1 class="font-bold text-xl">
             Question-4: What is event bubbling in the DOM?
           </h1>
-          
           <hr>
-          <p class="mt-4 text-gray-500 text-xl">
+          <p class=" text-gray-500 text-xl">
           Capturing the target element from the DOM tree and bubble up to the DOM.
           </p>
         </div>
@@ -116,8 +115,8 @@
           <h1 class="font-bold text-xl">  Question-5: How do you create, add, and remove elements using JavaScript?</h1>
             
           <hr class="border border-dashed border-[#3751fd17] mt-3" />
-          <p class="mt-4 text-gray-500 text-xl">
-            <ul class="ml-4  text-gray-500 text-xl">
+          <p class=" text-gray-500 text-xl">
+            <ul class="p-5   text-gray-500 text-xl">
               <li>To create element=document.createElement() </li>
               <li>To add an element=document.classList.add()</li>
               <li> To remove element=document.classList.remove()</li>
